--- a/config/database.yml
+++ b/config/database.yml
@@ -11,15 +11,15 @@ default: &default
 
 development:
   <<: *default
-  database: interview_app
+  database: interview_app.dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-#test:
-#  <<: *default
-#  database: db/test.sqlite3
-#
-#production:
-#  <<: *default
-#  database: db/production.sqlite3
+test:
+  <<: *default
+  database: interview_app.test
+
+production:
+  <<: *default
+  database: interview_app.prod
